# smithwaterman

./: .gitignore  Alignment.h  BandedSmithWaterman.cpp  BandedSmithWaterman.h  CMakeLists.txt  HashRegion.h  IndelAllele.cpp  LeftAlign.cpp  LeftAlign.h  Makefile  Mosaik.h  MosaikString.cpp  MosaikString.h  Repeats.cpp  Repeats.h  SWMain.cpp  SafeFunctions.h  SmithWatermanGotoh.cpp  SmithWatermanGotoh.h  SmithWatermanGotoh.sh  disorder.cpp  examples.txt  smithwaterman.cpp
